--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			}
 		  }
 		</script>
-		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/showdown@2.0.3/dist/showdown.min.js"></script>
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="styles/default.min.css">
