--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 					i+=1;
 				});
 
-				setGrade(right+"/"+total+`(${(right/(1.0*total))}%)`);
+				setGrade(right+"/"+total+`(${(right/(1.0*total))*100}%)`);
 			}
 			
 			function playSound(url) {
